--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
   <body>
     <h1>Hello there!</h1>
     <a href="/me.html">My other page</a>
+
+
+
+    <svg width="1000" height="250">
+      <rect width="150" height="150" fill="orange">
+        <animate attributeName="x" from="0" to="300"
+        dur="3s" fill="freeze" repeatCount="3" />
   </body>
 </html>
